fix beer slider mask overflow

--- a/components/beer.module.scss
+++ b/components/beer.module.scss
@@ -49,6 +49,7 @@
 }
 
 .details {
+  z-index: 2;
   opacity: 0;
   position: absolute;
   bottom: 0;
